--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -9,3 +9,11 @@
     display: inline-block;
     padding-bottom: 8px;
 }
+
+.time .colaboradores {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-top: 24px;
+}
